manifesto/match/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-all-match
  namespace: skills
spec:
  podSelector:
    matchLabels:
      app: match
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-from-ingress-match
  namespace: skills
spec:
  podSelector:
    matchLabels:
      app: match
  policyTypes:
    - Ingress
  ingress:
  - from:
    - ipBlock:
        cidr: 10.0.0.0/16
